--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "grandeur",
+    "name": "grandeur-backend",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Arth K. Gajjar",
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
+        "colors": "^1.3.3",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
