--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "private": false,
     "scripts": {
-        "start": "pm2 reload ecosystem.config.js"
+        "start": "node index.js"
     },
     "dependencies": {
         "axios": "^0.19.0",
